--- a/src/scss/blocks/_logo.scss
+++ b/src/scss/blocks/_logo.scss
@@ -2,10 +2,13 @@
 @use "../base" as *;
 
 .logo {
+  flex-shrink: 0;
+
   &__image {
     @include mobile {
       width: to-rem(138);
       height: to-rem(23);
+      flex-shrink: 0;
     }
   }
 }
