--- a/src/scss/helpers/_media.scss
+++ b/src/scss/helpers/_media.scss
@@ -1,8 +1,9 @@
 @use './functions' as *;
 
 $desktop: 1920;
-$laptop: 1500.98;
-$tablet: 1024.98;
+$laptop: 1400.98;
+$tablet: 1023.98;
+$mobile-b: 767.98;
 $mobile: 360.98;
 
 @mixin laptop-above {
@@ -25,6 +26,18 @@ $mobile: 360.98;
 
 @mixin tablet {
   @media (width <= to-rem($tablet)){
+    @content;
+  }
+}
+
+@mixin mobile-b--above {
+  @media (width > to-rem($mobile-b)){
+    @content;
+  }
+}
+
+@mixin mobile-b {
+  @media (width <= to-rem($mobile-b)){
     @content;
   }
 }
